# LFDisplay

./: .gitignore  CMakeLists.txt  Initialize3rdparty.sh  LICENSE  README.md
data/: USAF-1951-rectangles.txt  display-projectors-aligned.yaml  lensletdisplay.yaml
scenes/: killeroo-rgb.pbrt  usaf-1951.pbrt
scenes/geometry/: rectangle.pbrt
src/: LFRayTracer.h
src/ExampleEUSIPCO2020/: CMakeLists.txt  DisplayProjectorsCapture.cpp  DisplayProjectorsCapture.h  DisplayProjectorsOptimization.cpp  DisplayProjectorsOptimization.h  DisplayProjectorsShow.cpp  DisplayProjectorsShow.h  main.cpp
src/ExampleICIP2020/: CMakeLists.txt  DisplayLensletCapture.cpp  DisplayLensletShow.cpp  DisplayLensletShow.h  main.cpp
src/ExampleLenslet/: CMakeLists.txt  DisplayLensletCapture.cpp  DisplayLensletCapture.h  DisplayLensletShow.cpp  DisplayLensletShow.h  main.cpp
src/ExampleNearEyeInImRT/: BaseEnums.h  BaseInterfaces.h  BaseTypes.cpp  BaseTypes.h  CMakeLists.txt  CameraRealistic.cpp  CameraRealistic.h  ColorPanelInIm.cpp  ColorPanelInIm.h  Example05.cpp  GeometryMatrix.h  GeometryVector.h  Image2D.cpp  Image2D.h  ImageAnalysis.cpp  ImageAnalysis.h  ImageLayout.cpp  ImageLayout.h  LFDisplay05.cpp  LFDisplay05.h  LFRendererRoutines.cpp  LFRendererRoutines.h  RayTracer.cpp  RayTracer.h  RendererBaseTypes.h  SceneRectangles.cpp  SceneRectangles.h  main.cpp
src/ExampleProjectorImageOptimization/: CMakeLists.txt  DisplayProjectorIterations.cpp  DisplayProjectorIterations.h  DisplayProjectorsCapture.cpp  DisplayProjectorsCapture.h  DisplayProjectorsOptimization.cpp  DisplayProjectorsShow.cpp  DisplayProjectorsShow.h  ObserverSpace.h  main.cpp
src/Utilities/: BaseTypes.h  CMakeLists.txt  DiffuserModel.cpp  DiffuserModel.h  DiffuserTanBased.cpp  DiffuserTanBased.h  DisplayLenslet.cpp  DisplayLenslet.h  DisplayProjectorAligned.cpp  DisplayProjectorAligned.h  Image.cpp  Image.h  ImageAnalysis.cpp  ImageAnalysis.h  ImageStatistics.cpp  ImageStatistics.h  Parallel.cpp  Parallel.h  RayGenFocusEye.cpp  RayGenFocusEye.h  RayGenPinhole.cpp  RayGenPinhole.h  SampleAccumCV.cpp  SampleAccumCV.h  SampleGenDisk.cpp  SampleGenDisk.h  SampleGenUniform.cpp  SampleGenUniform.h
src/UtilityUSAFtoPBRT/: CMakeLists.txt  main.cpp
